added somewhat of a summary to the extreme window clustering at the end of that section

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -77,7 +77,7 @@ include paragraph about maori and pacific health in general in new zealand - don
 
 New Zealand M\tex{\={a}}ori and Pacific Islanders in New Zealand over the past decade have been exhibiting a decrease in overall health [@MinistryofHealth2016]. Fruit and vegetable intake, and physical activity has also been reported as decreasing. All the while there has been an increase in obesity, which has an adjusted rate ratio of 1.7 for  M\tex{\={a}}ori versus non-M\tex{\={a}}ori, and 2.4 for Pacific versus non-Pacific [@MinistryofHealth2016]. The rate of increase in \gls{bmi} for Pacific Islanders was five times that of the rest of the world, and fasting plasma glucose was three to four times higher over the 1980-2008 period [@Hawley2015]. The health disparities are captured in the New Zealand statistics where M\tex{\={a}}ori have a mortality rate of 1.8 that of non-M\tex{\={a}}ori, with the rates of obesity and diabetes of particular note, with the M\tex{\={a}}ori standardised rate of 40.6 per 100,000, five times higher than non-M\tex{\={a}}ori at 8.1 per 100,000 [@MinistryofHealth2012].
 
-New Zealand Polynesians have inherent elevated serum urate levels and higher prevalence of gout [@Winnard2012; @Winnard2013] and there are genetic variants in Polynesian populations associated with increased risk of gout and elevated serum urate [@Phipps-Green2010; @Hollis-Moffatt2012]. Serum urate has been associated with metabolic disorders [@Choi2007;@Choi2007b], and genes involved with complex diseases such as \gls{t2d}, gout, and other metabolic related disorders, have shown evidence for selection [@Zhang2013a; @pickrell2009signals;@Hancock2008]. 
+New Zealand Polynesians have inherent elevated serum urate levels and higher prevalence of gout [@Winnard2012; @Winnard2013] and there are genetic variants in Polynesian populations associated with increased risk of gout and elevated serum urate [@Phipps-Green2010; @Phipps-Green2016]. Serum urate has been associated with metabolic disorders [@Choi2007;@Choi2007b], and genes involved with complex diseases such as \gls{t2d}, gout, and other metabolic related disorders, have shown evidence for selection [@Zhang2013a; @pickrell2009signals;@Hancock2008]. 
 
 It is hypothesised that elevated serum urate may have undergone positive selection in Polynesian populations due to some of the beneficial properties [@Gosling2014], such as its role as a powerful anti-oxidant [@Ames1981], or as an adjuvant for the innate immune system [@Opitz2009]. Serum urate has also been suggested to have a protective neurological effect against dementia, and provides improved cognitive function with age [@Euser2009]. Characterisation of selection within Polynesian populations has been largely limited to population differentiation due to population sample sizes [@Kimura2008; @Mallick2016].
 
@@ -860,7 +860,7 @@ flf_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% select(contains
 
 ##### Zeng's _E_ distributions {#zeDist}
 
-Similar to \gls{td}, all of the distributions for \gls{ze} appear to have been shifted to the right (Figure \@ref(fig:zeDensity) and Table \@ref(tab:superGlobalSummaryZE)). The \gls{afr} populations had the lowest overall distribution, with the lowest mean (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['mean']] %>% three_dp()`), 1^st^ percentile (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['lower_1']] %>% three_dp()`), median (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['median']] %>% three_dp()`), 99^th^ percentile (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['upper_99']] %>% three_dp()`), maximum (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['max']] %>% three_dp()`), and range (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['range']] %>% three_dp()`). The \gls{eur} populations that had the lowest minimum (`r ze_super_pop_means %>% filter(super_pop == 'EUR') %>% .[['min']] %>% three_dp()`) and the highest maximum (`r ze_super_pop_means %>% filter(super_pop == 'EUR') %>% .[['max']] %>% three_dp()`), which also meant the largest range (`r ze_super_pop_means %>% filter(super_pop == 'EUR') %>% .[['range']] %>% three_dp()`). The highest mean of `r ze_super_pop_means %>% filter(super_pop == 'EAS') %>% .[['mean']] %>% three_dp()` was from \gls{eas}. The \gls{pol} populations had the second highest mean (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['mean']] %>% three_dp()`), median (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['median']] %>% three_dp()`), 99^th^ percentile (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['upper_99']] %>% three_dp()`), and maximum (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['max']] %>% three_dp()`). 
+Similar to \gls{td}, all of the distributions for \gls{ze} appear to have been shifted to the right, indicating a potential bias against low frequency variants (Figure \@ref(fig:zeDensity) and Table \@ref(tab:superGlobalSummaryZE)). The \gls{afr} populations had the lowest overall distribution, with the lowest mean (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['mean']] %>% three_dp()`), 1^st^ percentile (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['lower_1']] %>% three_dp()`), median (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['median']] %>% three_dp()`), 99^th^ percentile (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['upper_99']] %>% three_dp()`), maximum (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['max']] %>% three_dp()`), and range (`r ze_super_pop_means %>% filter(super_pop == 'AFR') %>% .[['range']] %>% three_dp()`). The \gls{eur} populations that had the lowest minimum (`r ze_super_pop_means %>% filter(super_pop == 'EUR') %>% .[['min']] %>% three_dp()`) and the highest maximum (`r ze_super_pop_means %>% filter(super_pop == 'EUR') %>% .[['max']] %>% three_dp()`), which also meant the largest range (`r ze_super_pop_means %>% filter(super_pop == 'EUR') %>% .[['range']] %>% three_dp()`). The highest mean of `r ze_super_pop_means %>% filter(super_pop == 'EAS') %>% .[['mean']] %>% three_dp()` was from \gls{eas}. The \gls{pol} populations had the second highest mean (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['mean']] %>% three_dp()`), median (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['median']] %>% three_dp()`), 99^th^ percentile (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['upper_99']] %>% three_dp()`), and maximum (`r ze_super_pop_means %>% filter(super_pop == 'POL') %>% .[['max']] %>% three_dp()`).
  
 
 (ref:zeDensity) Plot of the distribution of \gls{ze} by population. Triangles indicate the minimum and maximum values. Dots indicate the 1^st^ and 99^th^ percentiles for each population.
@@ -958,7 +958,33 @@ ze_met$pos_not_only_pol <-  ze_pos_pol_genes %>% filter( SYMBOL %in% genelists$g
 
 There were `r ze_neg_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the list of genes of metabolic disease associated genes and also had windows in the 1^st^ percentile, that intersected them from the Polynesian populations. Some examples of these genes are _MACF1_, _AGBL4_, _DACH1_, and _RBMS1_. _MACF1_ had windows that were in the 1^st^ percentile of all populations. _AGBL4_ and _DACH1_ had windows in nearly every population except for most \gls{afr} populations. _RBMS1_ was only in the 1^st^ percentile for the Western Polynesian populations \gls{sam} and \gls{ton}. Windows of the 99^th^ percentile in the Polynesian populations that intersected the metabolic disease associated genes tended to also be found in the populations of \gls{eas}, and many also were in common with all other populations but not many were in common with the \gls{afr} populations. There were `r ze_pos_pol_genes %>% filter(SYMBOL %in% genelists$genename) %>% pull(SYMBOL) %>% unique() %>% length()` genes that were in the 99^th^ percentile for Polynesians. Some examples were _CHST8_, _ERBB4_, _FHIT_, _PTPRD_, and _HMGA2_. _CHST8_ had windows that were in the 99^th^ percentile for the four Polynesian populations, as well as the populations of \gls{eas} with a couple of populations of both \gls{sas} and \gls{eur} too. _ERBB4_ had windows that were in both \gls{pol} and \gls{eas} populations. _FHIT_ had windows for the Western Polynesian populations, \gls{sam} and \gls{ton} and most of the populations from \gls{eas} and \gls{sas}. _PTPRD_ had windows from the Eastern Polynesian populations of \gls{cim} and \gls{nzm}, these windows were also in common with populations mostly from \gls{eur}, while some other windows were in common with the Eastern Polynesian populations and \gls{afr}. _HMGA2_ had windows in all of the super populations except \gls{afr}.
 
-#### \hl{Summary of clustering on extremes}
+#### Summary of clustering on extremes
+
+```{r, eval = FALSE}
+# overlap between all 1st percent for genes found in Pol
+intersect(intersect(td_neg_pol_genes$SYMBOL,ze_neg_pol_genes$SYMBOL),intersect(fwh_neg_pol_genes$SYMBOL, flf_neg_pol_genes$SYMBOL))
+# over lap between 99th percent for genes found in Pol
+intersect(intersect(td_pos_pol_genes$SYMBOL,ze_pos_pol_genes$SYMBOL),intersect(fwh_pos_pol_genes$SYMBOL, flf_pos_pol_genes$SYMBOL))
+
+# window postitions in common in 1st percentile for all four stats
+mat_d_list$td_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))%>% inner_join(., mat_d_list$fwh_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))) %>% inner_join(., mat_d_list$flf_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))) %>% inner_join(., mat_d_list$ze_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))) %>% filter(present == 1)
+
+
+#incommon based on super pop 1st percentile
+first_super_in_common <- mat_d_list$td_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop, 1,3))%>% inner_join(., mat_d_list$fwh_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop, 1,3))) %>% inner_join(., mat_d_list$flf_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop, 1,3))) %>% inner_join(., mat_d_list$ze_neg %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop,1,3))) %>% filter(present == 1) %>% distinct() %>% mutate(chrom = paste0('chr',chrom)) 
+left_join(first_super_in_common, first_super_in_common%>% GRanges() %>% txdb_gene_annotate() %>% dplyr::rename(chrom = seqnames, chrom_start = start, chrom_end = end)) %>% select(chrom, pop, SYMBOL) %>% distinct() 
+
+
+# window postitions in common in 99th percentile for all four stats
+mat_d_list$td_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))%>% inner_join(., mat_d_list$fwh_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))) %>% inner_join(., mat_d_list$flf_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))) %>% inner_join(., mat_d_list$ze_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.))) %>% filter(present == 1) 
+
+last_super_in_common <- mat_d_list$td_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop, 1,3))%>% inner_join(., mat_d_list$fwh_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop, 1,3))) %>% inner_join(., mat_d_list$flf_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop, 1,3))) %>% inner_join(., mat_d_list$ze_pos %>% select(-posid)%>% gather("pop","present", 4:NCOL(.)) %>% mutate(pop = stringr::str_sub(pop,1,3))) %>% filter(present == 1) %>% distinct() %>% mutate(chrom = paste0('chr',chrom)) 
+left_join(last_super_in_common, last_super_in_common%>% GRanges() %>% txdb_gene_annotate() %>% dplyr::rename(chrom = seqnames, chrom_start = start, chrom_end = end)) %>% select(chrom, pop, SYMBOL) %>% distinct()
+```
+
+Clustering of the windows using that fell in the lower 1% and upper 99% of the distributions for grouped the populations of the \gls{pol} super population together in all instances except the lower tail of \gls{flf}. There were no windows that were present for a single population in the 1^st^ percentile for all frequency-based statistics. The same applied for the 99^th^ percentile. Pooling the windows for each population within a super population for the 1st percentile, across all intra-population frequency based statistics used, had 16 genes. The \gls{afr} superpopulation had _PHF7_; \gls{eas} had _ALMS1_, _OPLAH_, _EXOSC4_, _GPAA1_, _CYC1_, and _SHARPIN_; \gls{eur} had _NTN3_; \gls{pol} had _FANCM_ and _ALMS1_; and \gls{sas} had _ABHD14A_, _ACY1_, _ABHD14B_, _TBC1D24_, and _NTN3_. \gls{eas} and \gls{pol} had _ALMS1_, a kidney function-associated locus [@pattaro2016genetic] in common, and \gls{eur} and \gls{sas} had _NTN3_ in common. There were no windows in the 99^th^ percentile that when populations were pooled as super populations were present in all four frequency-based statistics.
+
+
 
 \FloatBarrier
  
