--- a/03-SelectionPipeline.Rmd
+++ b/03-SelectionPipeline.Rmd
@@ -3019,11 +3019,9 @@ Urate has a central role in malarial infection and triggering an immune response
 
 _ABO_ was the only gene that had significant markers in all four Polynesian populations out of the malaria-associated genes, and this was only for \gls{ihs}. All of the markers with significant \gls{ihs} in _ABO_ were in favour of the derived allele haplotype. \Gls{cim} had two markers that were significant, the first, rs1053878, was also significant in \gls{ton}. The second marker, rs55764262, was significant in \gls{cim}, \gls{nzm}, and \gls{sam}, and was not in \gls{ld} (\gls{eas} R^2^ = 0.003) with rs549446. Rs549446 was significant in both \gls{chs} and \gls{jpt}. There were no windows from the frequency-based statistics that met the significance threshold. _ABO_ has also been associated with obesity in \gls{gwas} [@comuzzie2012novel]. The marker rs8176741 had been associated with severe malaria [@Timmann2012], however, this marker had a significant \gls{ihs} in \gls{fin} but no other populations. The other \glspl{snp} that showed significance for \gls{ihs} were not in \gls{ld} (\gls{eas} R^2^ = 0.002) with rs55764262, for which \gls{cim}, \gls{nzm} and \gls{sam} all had a significant result. Both \gls{cim} and \gls{ton} had a different marker (rs1053878) that was significant for \gls{ihs} in _ABO_.
 
-\hl{What is the mechanism for ABO to confer resistance/susceptability against malaria}
 
 Both \gls{sam} and \gls{nzm} had \glspl{snp} that were significant for \gls{ihs} in _ATP2B4_, \gls{sam} had rs10494845, and \gls{nzm} had rs142206068, both were in favour of the derived allele haplotype. The malaria-associated variant was rs10900585 [@Timmann2012]. All three variants were not in \gls{ld} with each other (\gls{eas} R^2^ = 0.00). The\gls{ld} was calculated using the full \gls{1kgp} marker list for \gls{eas} beacause rs10900585 was not on the CoreExome \gls{snp} array. 
 
-\hl{again more info about ATPB4 and malaria}
 
 ```{r}
 # snps from sig_ihs_val, Jallow2009, and Manjurano2015 for DDC locus
@@ -3195,13 +3193,11 @@ As discussed in @Gosling2014, the thrifty gene hypothesis in the context of the 
 
 ### Malaria
 
-\hl{XXX malaria is endemic in... and has been around for... other reports of malaria acting as selective pressure...}
 
-\hl{ABO is a blood group locus...potential mechanism}
+Malaria is endemic in the southwest pacific, extending out to the east as far as Vanuatu, but is absent further west in Polynesia [@Clark1993]. There is evidence of genetic advantage against malaria of Austronesian speaking populations in Near Oceania, through which the Polynesian ancestors would have passed through prior to settlement of the Pacfic [@Clark1993;]. In Remote Oceania, where malaria is absent, high frequencies of  $\alpha$-thalassaemia mutations (protective against malaria) have been identified in populations not exposed to malaria [@Hill1985]. Other malaria protective mutations, such as glucose-6-phosphate dehydrogenase deficiency and $\beta$-thalassaemia, are present in Pacific populations in higher frequencies [@Cappellini2008;@Flint1986].
 
+Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. With the blood antigen ABO, there is higher susceptibility to malaria in the A, B, or AB antigen groups, than O [@Zerihun2011]. This has led to the formulation of a potential mechanism of cytoadherence through infected red blood cells expressing PfEMP-1 and binding to the A or B antigens on other red blood cells, enabling further infection [@Cserti2015]. _ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
 
-
-Response to infectious challenge is a key mechanism that has been thought of as a selective pressure. Malarial infection provided a possible challenge to which urate may have been subjected to selective pressure, and as such provided a viable candidate due to the involvement of urate with malarial resistance [@GallegoDelgado2014]. There is also evidence of malaria in the prehistory skeletal remains of the western Pacific islands [@buckley2006predators]. Three loci that were associated with malaria and identified from the \gls{gwas} catalog were investigated for having signals of selection. Two genes that had evidence of selection in the Polynesian populations had also been identified as being associated with obesity and \gls{t2d}. _ABO_ and _ATP2B4_ did not have strong evidence, and it came from only \gls{ihs}. _ATP2B4_ encodes a plasma membrane calcium transporter, another calcium related gene with evidence of selection in \gls{nzm}, also sharing similarity with the many of the genes in the pathways from the pathway enrichment, in that they too were calcium channels. _DDC_ on the other hand, which had a nominally genome-wide significant association with malaria, had comparatively strong haplotypic evidence in the Eastern Polynesian populations. \Gls{nzm} had significant \gls{xpehh} results with every other non-Polynesian population and had six significant markers for \gls{ihs}, three of which were in the top 400 most extreme scores. Rs1966839 in _DDC_ was in near perfect \gls{ld} with the malaria associated intronic variant rs1451375 [@jallow2009genome] and the protective allele corresponded with the allele displaying a possible signal of selection.
 
 From the obesity \gls{gwas} associated gene list, there was _ADCY9_, which had a very strong signal for \gls{ihs} for 7 markers in \gls{cim} and 2 markers in \gls{nzm}, that were the only populations with significant \gls{ihs} values. The variant rs10775349 in _ADCY9_ had been associated with malaria in a candidate gene approach but not in \gls{gwas} [@Maiga2013].
 
