explicitly mention ukbb replicate results

--- a/05-Selection_and_association.Rmd
+++ b/05-Selection_and_association.Rmd
@@ -665,9 +665,9 @@ ukbb_p05_nsl2 <- sig_nsl_val %>% filter(pop == 'GBR', abs(statvalue) > 2.0 ) %>%
 
 
 
-When the results from the UK Biobank \gls{gwas} for gout (using the self-reported gout or \gls{ult} usage definition) and the \gls{ihs} and \gls{nsl} results for the \gls{gbr} population were combined, there was only one \gls{snp}, rs12638016 (intergenic), with an |\gls{ihs}| > 2.6 (equivalent to the most extreme 1%) that also had P < 10^-5^ in the \gls{gwas}. If the significance threshold for \gls{ihs} was reduced to |\gls{ihs}| > 2 (approximately the 5% extreme most values), then there were three \glspl{snp}, all located at _SLC22A12_ or within 1 kb, that were genome-wide significant in the \gls{gwas} (rs505802, rs9734313, and rs559946), and four \glspl{snp} that were nominally significant. There were `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had an |\gls{ihs}| > 2 and a gout \gls{gwas} of  P < 0.01. This decreased to `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 2e-4) %>% NROW() %>% num_to_word()` \glspl{snp}, when the \gls{gwas} P threshold was reduced to 2 x 10^-4^ (Table \@ref(tab:haplogwas)).
+When the results from the UK Biobank \gls{gwas} for gout (using the self-reported gout or \gls{ult} usage definition) and the \gls{ihs} and \gls{nsl} results for the \gls{gbr} population were combined, there was only one \gls{snp}, rs12638016 (intergenic), with an |\gls{ihs}| > 2.6 (equivalent to the most extreme 1%) that also had P < 10^-5^ in the \gls{gwas}. If the significance threshold for \gls{ihs} was reduced to |\gls{ihs}| > 2 (approximately the 5% extreme most values), then there were three \glspl{snp}, all located at _SLC22A12_ or within 1 kb, that were genome-wide significant in the \gls{gwas} (rs505802, rs9734313, and rs559946), and four \glspl{snp} that were nominally significant. There were `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had an |\gls{ihs}| > 2 and a gout \gls{gwas} of  P < 0.01. This decreased to `r ukbb_p05_ihs2 %>% filter(abs(statvalue) > 2.0, P< 2e-4) %>% NROW() %>% num_to_word()` \glspl{snp}, when the \gls{gwas} P threshold was reduced to 2 x 10^-4^ (Table \@ref(tab:haplogwas)). Only the variants in _SLC22A12_ replicated in the UK Biobank replication cohort.
 
-Using a threshold of |\gls{nsl}| > 2 and a nominally significant P < 10^-5^, two \glspl{snp} were identified, both on chromosome 6 (Table \@ref(tab:haplogwas)). The first was rs4712972, located in _SLC17A4._ The second was rs501220, located in _SLC17A3_. If the thresholds were relaxed, there were `r ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had a |\gls{nsl}| > 2 and a gout \gls{gwas} P < 0.01. This decreased to `r ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 2e-4) %>% NROW() %>% num_to_word()`, when a \gls{gwas} P threshold of 2 x 10^-4^ was used (Table \@ref(tab:haplogwas)).
+Using a threshold of |\gls{nsl}| > 2 and a nominally significant P < 10^-5^, two \glspl{snp} were identified, both on chromosome 6 (Table \@ref(tab:haplogwas)). The first was rs4712972, located in _SLC17A4._ The second was rs501220, located in _SLC17A3_. If the thresholds were relaxed, there were `r ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 0.01) %>% NROW()` \glspl{snp} that had a |\gls{nsl}| > 2 and a gout \gls{gwas} P < 0.01. This decreased to `r ukbb_p05_nsl2 %>% filter(abs(statvalue) > 2.0, P< 2e-4) %>% NROW() %>% num_to_word()`, when a \gls{gwas} P threshold of 2 x 10^-4^ was used (Table \@ref(tab:haplogwas)). The only variants that replicated in the UK Biobank replication cohort were from _SLC17A3_ and _SLC17A4_.
 
 
 ```{r ukhaplogwas, message = FALSE, warning = FALSE}
