rearrangement of paras as per Tony's suggestion

--- a/04-Clustering.Rmd
+++ b/04-Clustering.Rmd
@@ -2252,9 +2252,15 @@ In Chapter 3 (section \@ref(selectionDissussion)), it was noted that the populat
 
 The whole chromosome summary using the intra-population frequency spectrum neutrality and selection statistics had varying levels of success in re-assembling the super populations. \gls{flf} had mini-groups of 2-3 populations that were part of the same super population, but these mini-groups were not closely linked to the other groups of the same super population. These two statistics are based on singletons, and it is likely that these are not well represented in the markers of the CoreExome chip itself, or the quality control that the New Zealand samples underwent. During the quality control process, a singleton was more likely to be removed, or less likely to be rescued, upon manual inspection depending on the predefined cluster boundaries for the probe intensities in Genome Studio. This would lead to an under-representation of the singletons that actually might be present in the populations. Overall, it was found that the clustering of selection and neutrality test statistics for entire chromosomes did not resemble the grouping that clustering on F~ST~ produced. 
 
-#### Clustering of windowed statistics
+#### Clustering of extreme windowed statistics
 
 Compared to the entire chromosome summaries, using windows from the extremes of the distribution was effective at clustering the individual populations into their super population groups. \gls{fwh} was the only statistic that grouped all individual populations into their corresponding super populations, whereas \gls{td} and \gls{ze} had the same split of the \gls{amr} populations as with the F~ST~ clustering. The clustering of populations into their super populations was not seen when random windows were used for clustering, indicating that there is a degree of commonality in the extreme windows within a super population group. This would mean that there was similarity in the windows, and therefore regions of the genome that were represented in the extremes of the distributions between the populations of a super population. It also suggests that because these regions differ between super populations that these regions may have been influenced from the out of Africa migration and subsequent population movements. The haplotypic based methods of \gls{ihs} and \gls{nsl} clustered into super populations and had the \gls{amr} population split too. There was not a high amount of region sharing outside of each super population, again showing similarity within super populations but not between.
+
+Allele sharing between populations is moderate for common \glspl{snp}, and more so for continental groups, but is minimal for rarer frequencies, due to population divergence [@Gravel2011]. This helps to explain both of the patterns observed with \gls{sfs} based statistics for both the extremes and gene clustering. With the extremes, many of the super populations had windows that were not in the extremes of the other populations, these formed the 'blocks' in the heatmap, showing that there were regions of the genome that differed in extremity between super populations. This was most evident with the \gls{afr} populations, which had the majority of windows for each statistic not in common with the extremes from the other populations.
+
+The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used [@Tajima1989; @fay2000hitchhiking; @Fu1993; @Zeng2006]. The upper end of the distribution is able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics and represent the same types of selection or demography.
+
+The clustering of the most extreme windows represents, other than a similarity in allele frequencies between populations, a pattern that is consistent with the out of Africa model of human migration [@Mallick2016; @Pagani2016]. And represents the influence of selection, drift, population expansions, migrations, bottlenecks, introgression, and admixture following the population divergences over history.
 
 #### Clustering on genic regions
 
@@ -2264,11 +2270,9 @@ Clustering from gene lists for the frequency spectrum based selection and neutra
 this is not necessarily the case, due to the way things were annotated
 -->
 
-Allele sharing between populations is moderate for common \glspl{snp}, and more so for continental groups, but is minimal for rarer frequencies, due to population divergence [@Gravel2011]. This helps to explain both of the patterns observed with \gls{sfs} based statistics for both the extremes and gene clustering. With the extremes, many of the super populations had windows that were not in the extremes of the other populations, these formed the 'blocks' in the heatmap, showing that there were regions of the genome that differed in extremity between super populations. This was most evident with the \gls{afr} populations, which had the majority of windows for each statistic not in common with the extremes from the other populations.
 
-The extremes of the distributions represent different types of selection or demographic events and are different depending on the selection test statistic being used [@Tajima1989; @fay2000hitchhiking; @Fu1993; @Zeng2006]. The upper end of the distribution is able to be compared as all of the values that it encompassed were positive in value across all populations for all statistics and represent the same types of selection or demography.
 
-The clustering of the most extreme windows represents, other than a similarity in allele frequencies between populations, a pattern that is consistent with the out of Africa model of human migration [@Mallick2016; @Pagani2016]. And represents the influence of selection, drift, population expansions, migrations, bottlenecks, introgression, and admixture following the population divergences over history.
+
 
 <!-- >Tony: state the obvious, presumably a result of selection, drift, bottleneck, introgression -->
 
