--- a/01-Introduction.Rmd
+++ b/01-Introduction.Rmd
@@ -37,13 +37,13 @@ Hyperuricaemia can be caused by diet, genetic predisposition or under-excretion 
 
 ## Genetic variation
 
-As with many complex diseases, such as gout, \gls{td}, obesity, kidney disease, and metabolic syndrome, there is an environmental component and a genetic component. Genetic variation at a single locus, or at many, influences the genetic risk of an individual for developing disease. Genetic variation refers to the differences in DNA sequence that occur between individuals of a species. Types of genetic variation include, \gls{snp} which are single base changes (or polymorphisms), and \glspl{indel}. \Glspl{indel} are either additional DNA, or DNA that had been lost, and can be short (a single base, up to approximately 100 base pairs) or long (kilobases to megabases) at which point that can also become structural variants. Other types of genetic variation include copy number variation (alterations in the number of copies of a gene from what would be expected from the ploidy of the organism), and re-arrangements such as translocations - segments of DNA moving to different chromosomes, or inversions - segments of DNA that are excised, inverted, and reinserted at the same location on the chromosome. Within population based genetic studies, such as case-control association studies, the prominent type of genetic variation that is studied are \glspl{snp}. 
+As with many complex diseases, such as gout, \gls{t2d}, obesity, kidney disease, and metabolic syndrome, there is an environmental component and a genetic component. Genetic variation at a single locus, or at many, influences the genetic risk of an individual for developing disease. Genetic variation refers to the differences in DNA sequence that occur between individuals of a species. Types of genetic variation include, \gls{snp} which are single base changes (or polymorphisms), and \glspl{indel}. \Glspl{indel} are either additional DNA, or DNA that had been lost, and can be short (a single base, up to approximately 100 base pairs) or long (kilobases to megabases) at which point that can also become structural variants. Other types of genetic variation include copy number variation (alterations in the number of copies of a gene from what would be expected from the ploidy of the organism), and re-arrangements such as translocations - segments of DNA moving to different chromosomes, or inversions - segments of DNA that are excised, inverted, and reinserted at the same location on the chromosome. Within population based genetic studies, such as case-control association studies, the prominent type of genetic variation that is studied are \glspl{snp}. 
 
 Common methodologies of genotyping, to determine the genetic variation of an individual, are \gls{snp} arrays  or sequencing. \Gls{snp} arrays, such as the Illumina Human CoreExome beadchip contain probes designed for specific genetic variants that bind DNA samples, and after a single base extension step with a labelled nucleotide, enable a genotype to be determined from a fluorence sensitive scanner [@Wang1998;@Gunderson2005; Shen2005]. Sequencing technologies, such as the short read sequencing performed by the next-generation sequencers, take DNA and randomly fragment it, then determine the bases sequentially in the fragment to approximately 150 bp from the start to create a 'read' [@Metzker2010]. The reads are then aligned to a reference genome and at each base of the genome a genotype is called by using the distribution of bases from reads overlapping that position [@Li2008; @mckenna2010genome]. One of the key differences between \gls{snp} arrays and sequencing is that \gls{snp} arrays capture known variation, whereas sequencing allows for unknown genetic variants to be genotyped.
 
 ## Natural selection
 
-Charles @darwin1909origin in The Origin of Species declared: _“[The] preservation of favourable individual differences and variations, and the destruction of those which are injurious, I have called Natural Selection or Survival of the Fittest. Variations neither useful or injurious would not be affected by natural selection, and would be left either a fluctuating element, as perhaps we see in certain polymorphic species, or would ultimately become fixed, owing to the nature of the organism and the nature of the conditions.”_ This theory set the scene for research in population biology. Selection acts upon the phenotype and this pressure then transfers through to act upon the genetic contribution of that phenotype. Most important to Darwin’s Theory was it created models for what natural selection should look like and the methods for being able to detect selective events on the genetics of organisms. A focus on selection in humans has added insight into past events since migration out of Africa [@Soares2012] and yielded possibilities of the influences on human disease. \hl{XXX extra}
+Charles @darwin1909origin in The Origin of Species declared: _“[The] preservation of favourable individual differences and variations, and the destruction of those which are injurious, I have called Natural Selection or Survival of the Fittest. Variations neither useful or injurious would not be affected by natural selection, and would be left either a fluctuating element, as perhaps we see in certain polymorphic species, or would ultimately become fixed, owing to the nature of the organism and the nature of the conditions.”_ This theory set the scene for research in population biology. Selection acts upon the phenotype and this pressure then transfers through to act upon the genetic contribution of that phenotype. Most important to Darwin’s Theory was it created models for what natural selection should look like and the methods for being able to detect selective events on the genetics of organisms. A focus on selection in humans has added insight into past events since migration out of Africa [@Soares2012] and yielded possibilities of the influences on human disease.
 
 
 ### Neutrality and genetic drift
@@ -225,7 +225,7 @@ meta\-SS = \frac{\sum\limits_{i =1}^k {\omega_i Z_i}}{\sqrt{\sum\limits_{i =1}^k
 
 ### Power
 
-Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, as they won't 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
+Power to detect selected sites can be very limited if the site is not an outlier from empirical methods, such as simulations or using permutations of the data, as they won't 'stand out' [@Teshima2006]. A key consideration when selecting a particular method for detecting selection is the limitations the method has on power to detect a selective event, such as starting and final allele frequency of the variant after a sweep. \Gls{td} is powered for low and intermediate frequency variants [@Simonsen1995] whereas \gls{fwh} is powered for intermediate and high frequency variants. Some methods such as \gls{ihs}, are good for detection of middle frequency variants. \Gls{xpehh}, on the other hand is powered at the fixation ends of the spectrum. \Gls{xpehh}, because it is correlated with \gls{ld}, lacks power to detect ancient selective events [@Chen2010].  Sample size is another factor to consider. \Gls{ihs} has modest reduction of power when reducing samples until approximately 40 samples of single chromosomes. \Gls{xpehh} can maintain power down to about 20 samples of single chromosomes, so long as the reference population is a fixed size. The grouping of similar genetic populations may be an option to increase power with low sample sizes [@pickrell2009signals]). For F~ST~, power to detect selection should be sufficient if sample size is > 1/F~ST~ [@Bhatia2013a; @Bhatia2011]
 
 Power of a statistic also needs to be considered for the type of selective sweep that may have occurred, such is the case with \gls{nsl}, which has similar power to detect selection to \gls{ihs}, but performs better for larger starting allele frequencies. It also outperforms \gls{ihs} in power in both hard and soft sweep scenarios [@Ferrer-Admetlla2014]. When it comes to picking up demographic events, haplotype tests are useful at detecting recent and more moderate bottlenecks, frequency spectrum tests (such as \gls{fwh}/ \gls{td}) have the best power for detecting moderately ancestral severe bottlenecks [@Depaulis2003], whereas \gls{ze} and \gls{flf} have the most power during population expansion [@Zeng2006;@Ramirez-Soriano2008].
 
@@ -288,12 +288,11 @@ The inclusion of Oceanic populations in multi-population studies has had a focus
 
 Large population comparison studies have used Oceanic populations, but analyses were limited to Melanesian and Papuan populations because the cohort used was the Human Genome Diversity Project [@Cann2002] which didn't include Polynesian populations. The Melanesian and Papuan populations are often used to infer the genetics of Polynesian populations. This extrapolation doesn't take into account the current ancestry predictions of Polynesians populations being more closely related to Asian/Taiwanese Aboriginal populations than Melanesian groups, or the presence of European admixture [@Friedlaender2008]. Genomic DNA and mitochondrial DNA suggest Polynesians have East Asian ancestry, with substantial male Melanesian admixture [@Kayser2008a]. There has been limited analysis of selection in Polynesian populations beyond @Kimura2008, where 24 Tongan samples in conjunction with other populations were analysed using both F~ST~ and a modified \gls{ehh} test. Genomic regions with evidence of having been selected in the Tongan samples were potential candidates for increased fat, muscle and bone masses [@Kimura2008].
 
-A few candidate-genes for selection which also have been associated with obesity and \gls{t2d} in Polynesian populations have been investigated, such as the _PPARGC1A_ [@Myles2011] and _CREBRF_ [@Minster2016] genes. The "Thrifty-gene hypothesis" [@Neel1962] has been the reasoning behind why these loci may have undergone selection. The hypothesis was originally conceived to attempt to explain the difference in prevalence of \gls{t2d}, that is, given that there should be a \hl{strong selective pressure against it (XXX why)}, there must be some genetic advantage. This hypothesis has been challenged in the Polynesian context as fitting a particular narrative [@Gosling2014; @Gosling2015; @Cadzow2016] with an alternative hypothesis being a link between the metabolic diseases and the innate immune system that is under selective pressure via an infectious agent, such as malaria, leading to disease susceptibility in these populations [@Gosling2015].
+A few candidate-genes for selection which also have been associated with obesity and \gls{t2d} in Polynesian populations have been investigated, such as the _PPARGC1A_ [@Myles2011] and _CREBRF_ [@Minster2016] genes. The "Thrifty-gene hypothesis" [@Neel1962] has been the reasoning behind why these loci may have undergone selection. The hypothesis was originally conceived to attempt to explain the difference in prevalence of \gls{t2d}, that is, given that there should be a strong selective pressure against it, there must be some genetic advantage. This hypothesis has been challenged in the Polynesian context as fitting a particular narrative [@Gosling2014; @Gosling2015; @Cadzow2016] with an alternative hypothesis being a link between the metabolic diseases and the innate immune system that is under selective pressure via an infectious agent, such as malaria, leading to disease susceptibility in these populations [@Gosling2015].
 
 
 ### Selection of metabolic syndrome and urate {#goutMetSyn}
 
-<!-- XXX fix this section -->
 
 The genetic influence of urate and gout is found in the under-excretion of serum urate. There are 28 loci that have been identified as having a role in \gls{hu} and gout, of which, two (_ABCG2_ and _SLC2A9_) are responsible 3.4% of the variability of urate [@Kottgen2013]. _SLC2A9_ encodes a urate transporter expressed on both the apical and baso-lateral membranes in the proximal tubule of the kidney and reabsorbs urate [@Mandal2015]. _ABCG2_ encodes an ATP powered urate transporter and is responsible for urate excretion mostly in the gut [@Maliepaard2001; @Mandal2015]. Twenty-six other loci associated with serum urate explain a further 3.6% of the variance [@Kottgen2013]. The heritability of serum uric acid ranges from 40 - 70% [@Nath2007; @Yang2005]. This difference in explained variability and total heritability leaves a large component yet to be explained. This missing heritability could be reduced through identifying additional variance attributed to non-additive effects.
 
